<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/preGameLinear"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#ECCEAC" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#AC8D6E"
                android:text="@string/numberQuestions"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />

            <SeekBar
                android:id="@+id/seekBarNumberOfQuestions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:padding="20dp"
                android:progress="4" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/numberOfQuestions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="25dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000" />

                <CheckBox
                    android:id="@+id/checkBoxMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="25dp"
                    android:text="@string/max"
                    android:textColor="#000" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#AC8D6E"
                android:text="@string/stats"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />

            <TextView
                android:id="@+id/textHits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <TextView
                android:id="@+id/textMiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />
            
            <TextView
                android:id="@+id/textTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <Button
                android:id="@+id/buttonResetStats"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:padding="10dp"
        android:background="#AC8D6E"
        android:text="@string/start" />

</LinearLayout>