<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLinear"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ECCEAC"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title"
        android:src="@drawable/title" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="2" >

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/imageButtonSelector1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/daybutton"
                        android:gravity="center_vertical|center_horizontal" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dayWord"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp" >

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp" >

                        <Button
                            android:id="@+id/imageButtonSelector3"
                            android:layout_width="wrap_content"
                            android:layout_height="0dip"
                            android:layout_weight="1"
                            android:background="@drawable/gamebutton" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/game"
                            android:textColor="#000000"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp" >

                        <Button
                            android:id="@+id/imageButtonSelector2"
                            android:layout_width="wrap_content"
                            android:layout_height="0dip"
                            android:layout_weight="1"
                            android:background="@drawable/listabutton" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/wordList"
                            android:textColor="#000000"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/imageButtonTools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dip"
        android:background="@drawable/llavebutton" />

</LinearLayout>